--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Chitchatz App",
   "icons": [
     {
-      "src": "/images/chatz.PNG",
+      "src": "/images/chatz.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
