Room Heade4r Created 26

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,22 @@
 {
-  "short_name": "Chitchatz",
+  "short_name": "Chitchatz App",
   "name": "Chitchatz App",
   "icons": [
     {
-      "src": "https://static.vecteezy.com/system/resources/thumbnails/002/135/986/small/chat-wing-logo-design-illustration-free-vector.jpg",
+      "src": "chats.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "chats.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "chats.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
-   
   ],
   "start_url": ".",
   "display": "standalone",
