Room Heade4r Created 31

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Chitchatz App",
   "icons": [
     {
-      "src": "log.jpeg",
+      "src": "logo.jpeg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "log.jpeg",
+      "src": "logo.jpeg",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "log.jpeg",
+      "src": "logo.jpeg",
       "type": "image/png",
       "sizes": "512x512"
     }
